<resources>
    <string name="app_name">Weather</string>
    <string name="dayOfWeek">Thursday, March 12</string>
    <string name="moscow">Moscow</string>
    <string name="codeDegree">℃</string>
    <string name="cloudy">Cloudy</string>
    <string name="friday_13">Friday, 13</string>
    <string name="lblSearchCity">City search</string>
    <string name="chkAdvParamCity">Display wind pressure and speed</string>
    <string name="degreesVal">8</string>
    <string name="futureDergrVal">6</string>
    <string name="slashVal">/</string>
    <string name="degresssNightVal">2</string>
    <string name="lblSettings">Settings</string>
    <string name="settingsNightDay">Light / Dark Theme</string>
    <string name="fahrenheit">℃/℉</string>
    <string name="back">Back</string>
    <string name="_775_21">775,21</string>
    <string name="lblPressure">мм рт. ст.</string>
    <string name="valueSpeed">3</string>
    <string name="speedUnit">м/с</string>
    <string name="findCity">Поиск города</string>
    <string name="exchange_city">Изменить горд</string>
    <string name="settings">Настройки</string>

</resources>
