<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainDay">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back"
        android:layout_width="45dp"
        android:layout_height="33dp"
        android:layout_marginBottom="11dp"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toTopOf="@+id/swTheme"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintHorizontal_bias="0.28"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:icon="@drawable/back"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="15dp"
        android:text="@string/lblSettings"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.055"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="105dp"
        android:text="@string/settingsNightDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swDergreeFahrenheit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fahrenheit"
        android:layout_marginTop="155dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/swTheme"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/swTheme"
        app:layout_constraintTop_toBottomOf="@+id/swTheme"
        app:layout_constraintVertical_bias="0.02" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/swPressureSpeed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="205dp"
        android:text="@string/chkAdvParamCity" />

</FrameLayout>