<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainDay"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgWeather"
        android:layout_width="105dp"
        android:layout_height="69dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="11dp"
        android:contentDescription="TODO"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:srcCompat="@drawable/cloud_sm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnCheckCity"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/checkSettings"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:icon="@drawable/city"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/checkSettings"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:icon="@drawable/key"
        style="@style/Widget.MaterialComponents.Button.TextButton.Icon" />

    <TextView
        android:id="@+id/city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/moscow"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtDegrees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="12dp"
        android:text="@string/degreesVal"
        android:textColor="@color/colorWhite"
        android:textSize="75sp"
        app:layout_constraintEnd_toStartOf="@+id/imgWeather"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/txtTypeDegree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="87dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="9dp"
        android:layout_marginTop="13dp"
        android:text="@string/codeDegree"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/dayOfWeekFuture"
        app:layout_constraintEnd_toStartOf="@+id/imgWeather"
        app:layout_constraintStart_toEndOf="@+id/txtDegrees"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <TextView
        android:id="@+id/txtWeather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/cloudy"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.905"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgWeather"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dayOfWeekFuture"
        android:layout_width="125dp"
        android:layout_height="39dp"
        android:layout_marginTop="15dp"
        android:text="@string/friday_13"
        android:textColor="@color/colorWhite"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.576"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDegrees" />

    <FrameLayout
        android:id="@+id/fragment_container_pressure"
        android:layout_width="151dp"
        android:layout_height="102dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/txtDegrees"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city"
        app:layout_constraintVertical_bias="0.024" />

    <FrameLayout
        android:id="@+id/fragment_container_city"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerToDays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="300dp"
            android:orientation="horizontal"/>
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fragment_container_settings"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>